base/zones/zone-ot/networkpolicy-allow-dmz.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-dmz-only
  namespace: zone-ot
  annotations:
    iec62443.sr: "SR 5.1 -- Conduit DMZ to OT"
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          zone: dmz
